[gd_scene load_steps=9 format=3 uid="uid://fuuapogjlmic"]

[ext_resource type="Script" path="res://Actors/Player/Player.gd" id="1_8q1wp"]
[ext_resource type="Texture2D" uid="uid://dinej5exfhevb" path="res://Actors/Player/tank.png" id="1_vo3dt"]
[ext_resource type="Texture2D" uid="uid://dd1n5kqwmhg2h" path="res://UI/UIAsset2.png" id="3_4vso6"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_rarsv"]
size = Vector2(35, 20)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_pfkag"]
size = Vector2(38, 11)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_8eq24"]
size = Vector2(22, 11)

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_5e52a"]
texture = ExtResource("3_4vso6")
region_rect = Rect2(14.4408, 231.463, 295.089, 37.3668)

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_g37le"]
texture = ExtResource("3_4vso6")
region_rect = Rect2(102.159, 701.044, 299.518, 38.2039)
modulate_color = Color(0.568656, 0.719088, 0.126091, 1)

[node name="Player" type="CharacterBody2D"]
script = ExtResource("1_8q1wp")

[node name="GreenTank" type="Node2D" parent="."]

[node name="Cannon" type="Sprite2D" parent="GreenTank"]
position = Vector2(0, -7)
scale = Vector2(-1, 1)
texture = ExtResource("1_vo3dt")
offset = Vector2(-8.3, -0.05)
region_enabled = true
region_rect = Rect2(26.6438, 11.6349, 17.5451, 6.76247)

[node name="SpawnBullet" type="Marker2D" parent="GreenTank/Cannon"]
position = Vector2(-30, 0)
rotation = 3.14159
scale = Vector2(1, -1)
gizmo_extents = 50.0

[node name="Base" type="Sprite2D" parent="GreenTank"]
texture_filter = 1
scale = Vector2(-1, 1)
texture = ExtResource("1_vo3dt")
region_enabled = true
region_rect = Rect2(14.5574, 25.2774, 39.763, 23.4365)

[node name="RedTank" type="Node2D" parent="."]

[node name="Cannon" type="Sprite2D" parent="RedTank"]
position = Vector2(-2, -7)
texture = ExtResource("1_vo3dt")
offset = Vector2(-8.3, -0.05)
region_enabled = true
region_rect = Rect2(87.8352, 11.9003, 17.3989, 6.2409)

[node name="SpawnBullet" type="Marker2D" parent="RedTank/Cannon"]
position = Vector2(-30, 0)
gizmo_extents = 50.0

[node name="Base" type="Sprite2D" parent="RedTank"]
texture_filter = 1
texture = ExtResource("1_vo3dt")
region_enabled = true
region_rect = Rect2(75.8457, 25.7914, 39.2904, 22.4372)

[node name="Collision" type="CollisionShape2D" parent="."]
visible = false
position = Vector2(2, 0)
shape = SubResource("RectangleShape2D_rarsv")

[node name="HurtBox" type="Area2D" parent="." groups=["Player"]]
collision_layer = 2
collision_mask = 2

[node name="CollisionBase" type="CollisionShape2D" parent="HurtBox"]
position = Vector2(0, 4.5)
shape = SubResource("RectangleShape2D_pfkag")

[node name="CollisionTop" type="CollisionShape2D" parent="HurtBox"]
position = Vector2(0, -6)
shape = SubResource("RectangleShape2D_8eq24")

[node name="SubViewportContainer" type="SubViewportContainer" parent="."]
anchors_preset = 14
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
offset_left = -25.0
offset_top = 12.5
offset_right = 25.0
offset_bottom = 22.5
grow_horizontal = 2
grow_vertical = 2

[node name="GreenPlayer" type="SubViewport" parent="SubViewportContainer"]
size = Vector2i(50, 10)

[node name="ProgressBar" type="ProgressBar" parent="SubViewportContainer/GreenPlayer"]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_styles/background = SubResource("StyleBoxTexture_5e52a")
theme_override_styles/fill = SubResource("StyleBoxTexture_g37le")
value = 100.0
show_percentage = false

[node name="RedPlayer" type="SubViewport" parent="SubViewportContainer"]
size = Vector2i(50, 10)

[node name="ProgressBar" type="ProgressBar" parent="SubViewportContainer/RedPlayer"]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_styles/background = SubResource("StyleBoxTexture_5e52a")
theme_override_styles/fill = SubResource("StyleBoxTexture_g37le")
value = 100.0
show_percentage = false
